[gd_scene load_steps=15 format=3 uid="uid://dnxsivs0thg5p"]

[ext_resource type="Texture2D" uid="uid://tfqt6svvikru" path="res://img/buy/background_buy.png" id="1_tekw2"]
[ext_resource type="Script" uid="uid://b1cmnbb84wmnw" path="res://scenes/buy/buy_button.gd" id="2_3mdfh"]
[ext_resource type="Texture2D" uid="uid://bvsvyynhf2nom" path="res://img/buy/buy_menu_boss.png" id="2_gwa4s"]
[ext_resource type="Texture2D" uid="uid://b8xht1dcy7xl1" path="res://img/buy/buy_menu_bird_plaza.png" id="3_67ede"]
[ext_resource type="Texture2D" uid="uid://jpno2y127xut" path="res://img/buy/buy_menu_bird_plaza_active.png" id="4_k7o2t"]
[ext_resource type="Texture2D" uid="uid://yl17ril7hasv" path="res://img/buy/buy_menu_building.png" id="5_d2rik"]
[ext_resource type="Texture2D" uid="uid://bq530rfshylbd" path="res://img/buy/buy_menu_garden_center.png" id="7_v0mjg"]
[ext_resource type="Texture2D" uid="uid://dq5ukh0ybsqoh" path="res://img/buy/buy_menu_garden_center_active.png" id="8_6vogg"]
[ext_resource type="Texture2D" uid="uid://d15xbxjwm5nv" path="res://img/buy/buy_menu_groceries.png" id="9_5vahe"]
[ext_resource type="Texture2D" uid="uid://d0h82r6xmwpny" path="res://img/buy/buy_menu_groceries_active.png" id="10_ij1g2"]
[ext_resource type="Texture2D" uid="uid://63u7t2redjqj" path="res://img/buy/buy_menu_paper.png" id="11_tfy1a"]
[ext_resource type="Texture2D" uid="uid://bj103qhqd5ujh" path="res://img/buy/buy_menu_pencil.png" id="12_fmag6"]
[ext_resource type="Texture2D" uid="uid://dq1jvrl4d1jp8" path="res://img/buy/buy_menu_resumes.png" id="13_536of"]
[ext_resource type="Texture2D" uid="uid://cfs2xltkd0ate" path="res://img/buy/buy_menu_resumes_active.png" id="14_3ineh"]

[node name="Buy" type="Node"]

[node name="BackgroundBuy" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tekw2")

[node name="birdplaza" type="Area2D" parent="BackgroundBuy" node_paths=PackedStringArray("sprite")]
position = Vector2(932, 480.5)
script = ExtResource("2_3mdfh")
active = ExtResource("4_k7o2t")
inactive = ExtResource("3_67ede")
scene = 11
sprite = NodePath("BuyMenuBirdPlaza")

[node name="BuyMenuBirdPlaza" type="Sprite2D" parent="BackgroundBuy/birdplaza"]
position = Vector2(-40, -320)
texture = ExtResource("3_67ede")

[node name="cpbirdplaza" type="CollisionPolygon2D" parent="BackgroundBuy/birdplaza"]
position = Vector2(-40, -320)
polygon = PackedVector2Array(30.5, -127.1, 30.5, -124.7, -209, 13.5, -211.3, 13.5, -218.3, 20.5, -219.9, 20.5, -220.9, 23.1, -213.5, 29.4, -213.5, 30.7, -42.5, 127.6, -42.5, 128.7, -39, 130.5, -34.8, 130.5, -30.8, 127.5, -28.9, 127.5, 213, -16.5, 214.7, -16.5, 215.8, -18.7, 212.5, -23.2, 212.5, -24.7, 42.5, -122.7, 42.5, -124.1)

[node name="building" type="Area2D" parent="BackgroundBuy"]
position = Vector2(932, 480.5)

[node name="BuyMenuBuilding" type="Sprite2D" parent="BackgroundBuy/building"]
position = Vector2(-490, 50)
texture = ExtResource("5_d2rik")

[node name="cpbuilding" type="CollisionPolygon2D" parent="BackgroundBuy/building"]
position = Vector2(-490, 50)
polygon = PackedVector2Array(-80.5, -64, -80.5, -60.9, -82.8, -55.5, -84.1, -55.5, -97.2, 8.5, -98.5, 8.5, -98.5, 16.7, -94.5, 18.7, -94.5, 20.1, 67.3, 55.5, 73.9, 55.5, 76.9, 47.5, 78.1, 47.5, 91.2, -16.5, 92.5, -16.5, 92.5, -24.7, 88.5, -26.8, 88.5, -28.1)

[node name="groceries" type="Area2D" parent="BackgroundBuy" node_paths=PackedStringArray("sprite")]
position = Vector2(932, 480.5)
script = ExtResource("2_3mdfh")
active = ExtResource("10_ij1g2")
inactive = ExtResource("9_5vahe")
scene = 12
sprite = NodePath("BuyMenuGroceries")

[node name="BuyMenuGroceries" type="Sprite2D" parent="BackgroundBuy/groceries"]
position = Vector2(-275, -100)
texture = ExtResource("9_5vahe")

[node name="cpgroceries" type="CollisionPolygon2D" parent="BackgroundBuy/groceries"]
position = Vector2(-275, -100)
polygon = PackedVector2Array(31.5, -77.5, 31.5, -76.5, 27.1, -76.5, -37.5, -48.8, -37.5, -48.1, -80.5, -37.1, -80.5, -36.3, -116.5, -32.3, -116.5, -31.7, -154.5, -34.4, -157, -35.9, -159.3, -33.5, -160.9, -33.5, -161.9, -31, -134.7, -5.7, -158, 6.5, -161.1, 6.5, -159.5, 12.5, -159.5, 22.6, -156.5, 24.6, -156.5, 25.8, -32.9, 81.5, -29.9, 81.5, 154.1, -33.5, 156.8, -33.5, 155.5, -43.7, 155.5, -48.5, 147.5, -54.5, 147.5, -57.5, 138.1, -53.6, 133.5, -57.5, 133.5, -60.7, 125, -56.5, 124.2, -56.5, 119.5, -59.6, 119.5, -61.5, 99.2, -61.5, 94.5, -64.6, 94.5, -65.7, 92.4, -66.8, 88.9, -64.5, 86.5, -64.5, 84.5, -67.2, 84.5, -70.5, 75.1, -66.6, 71.5, -69.5, 71.5, -72.5, 64, -69.5, 63.3, -69.5, 61.5, -71.3, 61.5, -74.5, 54.1, -71.6, 51.5, -73.5, 51.5, -76.5, 44, -73.5, 43.3, -73.5, 41.5, -75.3, 41.5, -77.5)

[node name="gardencenter" type="Area2D" parent="BackgroundBuy" node_paths=PackedStringArray("sprite")]
position = Vector2(932, 480.5)
script = ExtResource("2_3mdfh")
active = ExtResource("8_6vogg")
inactive = ExtResource("7_v0mjg")
scene = 13
sprite = NodePath("BuyMenuGardenCenter")

[node name="BuyMenuGardenCenter" type="Sprite2D" parent="BackgroundBuy/gardencenter"]
texture = ExtResource("7_v0mjg")

[node name="cpgardencenter" type="CollisionPolygon2D" parent="BackgroundBuy/gardencenter"]
polygon = PackedVector2Array(-39.5, -129.6, -39.5, -128.3, -57.8, -125.5, -62.8, -125.5, -79.9, -119.5, -83, -119.5, -102, -109.5, -104.2, -109.5, -118.2, -98.5, -120.2, -98.5, -158.2, 99.5, -160.3, 99.5, -157.5, 107.8, -157.5, 109.7, -155.5, 110.8, -148.5, 106.6, -132.5, 105.4, -132.5, 104.5, -104.5, 105.5, -91.9, 105.5, -52.7, 112.5, -47.8, 112.5, -16.8, 121.5, -15.1, 121.5, 5.5, 112.8, 5.5, 112.2, 21.8, 109.5, 57.2, 109.5, 89.3, 114.5, 95.4, 114.5, 126.2, 122.5, 132.2, 122.5, 134.2, 111.5, 135.4, 111.5, 144.4, -70.5, 145.7, -70.5, 143.5, -90.7, 143.5, -93.3, 119.5, -95.4, 119.5, -96.6, 66.4, -93.5, 59.2, -93.5, 33.4, -86.5, 29.1, -86.5, 13.2, -79.5, 11, -79.5, -1.3, -87.1, 3.5, -117.3, 3.5, -127.4)

[node name="resume" type="Area2D" parent="BackgroundBuy" node_paths=PackedStringArray("sprite")]
position = Vector2(932, 480.5)
script = ExtResource("2_3mdfh")
active = ExtResource("14_3ineh")
inactive = ExtResource("13_536of")
scene = 9
sprite = NodePath("BuyMenuResumes")

[node name="BuyMenuResumes" type="Sprite2D" parent="BackgroundBuy/resume"]
position = Vector2(-670, -233.5)
texture = ExtResource("13_536of")

[node name="cpresume" type="CollisionPolygon2D" parent="BackgroundBuy/resume"]
position = Vector2(-670, -230)
polygon = PackedVector2Array(64.1, -215.4, 61.5, -214.4, 61.5, -213.7, -137.9, -176, -143.3, -176, -147.5, -171.8, -147.5, -168.8, -143.7, -153.5, -154.8, -150, -157.8, -150, -101.5, 198.3, -101.5, 200.8, -98.3, 204, -92.3, 204, -67.1, 199, -62.9, 199, -58.9, 209, -52.2, 209, 46.5, 181.5, 46.5, 180.7, 136.8, 166, 143.2, 166, 147.2, 163, 149.8, 163, 148.5, 153.7, 148.5, 152.1, 151.5, 150.1, 151.5, 146.7, 144, 120, 143.2, 120, 110.2, -92, 109.5, -92, 108.5, -135, 108.5, -177.8, 105.3, -181, 94.9, -181, 92.5, -188.3, 92.5, -191.4, 73.2, -188, 70.5, -202.4, 70.5, -207.7)

[node name="BuyMenuBoss" type="Sprite2D" parent="BackgroundBuy"]
position = Vector2(574, 73.5)
texture = ExtResource("2_gwa4s")

[node name="BuyMenuPaper" type="Sprite2D" parent="BackgroundBuy"]
position = Vector2(514, 250.5)
texture = ExtResource("11_tfy1a")

[node name="BuyMenuPencil" type="Sprite2D" parent="BackgroundBuy"]
position = Vector2(646, 548.5)
texture = ExtResource("12_fmag6")

[connection signal="input_event" from="BackgroundBuy/birdplaza" to="BackgroundBuy/birdplaza" method="on_input_event"]
[connection signal="mouse_entered" from="BackgroundBuy/birdplaza" to="BackgroundBuy/birdplaza" method="on_mouse_entered"]
[connection signal="mouse_exited" from="BackgroundBuy/birdplaza" to="BackgroundBuy/birdplaza" method="on_mouse_exited"]
[connection signal="input_event" from="BackgroundBuy/groceries" to="BackgroundBuy/groceries" method="on_input_event"]
[connection signal="mouse_entered" from="BackgroundBuy/groceries" to="BackgroundBuy/groceries" method="on_mouse_entered"]
[connection signal="mouse_exited" from="BackgroundBuy/groceries" to="BackgroundBuy/groceries" method="on_mouse_exited"]
[connection signal="input_event" from="BackgroundBuy/gardencenter" to="BackgroundBuy/gardencenter" method="on_input_event"]
[connection signal="mouse_entered" from="BackgroundBuy/gardencenter" to="BackgroundBuy/gardencenter" method="on_mouse_entered"]
[connection signal="mouse_exited" from="BackgroundBuy/gardencenter" to="BackgroundBuy/gardencenter" method="on_mouse_exited"]
[connection signal="input_event" from="BackgroundBuy/resume" to="BackgroundBuy/resume" method="on_input_event"]
[connection signal="mouse_entered" from="BackgroundBuy/resume" to="BackgroundBuy/resume" method="on_mouse_entered"]
[connection signal="mouse_exited" from="BackgroundBuy/resume" to="BackgroundBuy/resume" method="on_mouse_exited"]
